tests/test_files/valid/scheduling/rule_in_task.pfdl
# Copyright The MF-Plugin Contributors
#
# Licensed under the MIT License.
# For details on the licensing terms, see the LICENSE file.
# SPDX-License-Identifier: MIT

Rule before(event1, event2, offset)
    (event1.time < event2.time + offset) And !(event1.value != 5)
End

Rule orderOfEvents(event1, event2)
    before(event1, event2, 10) # implicit and
    event2.value == 150
End

Event manualLoadingConfirmation
    id : "buttonFtfIsLoaded"
    value : 5
End

Event manualLoadingConfirmation2
    id : "buttonFtfIsLoaded"
    value : 150
End

Location warehouse1
    id: "0x4711"
    type: "pallet"
End

Location production1
    id: "0x4712"
    type: "pallet"
End

TransportOrderStep tosWarehouse1
    Location warehouse1
End

TransportOrderStep tosProduction1
    Location production1
End

Task mainTask
    helloWorld
End

Task helloWorld
    StartedBy orderOfEvents(manualLoadingConfirmation, manualLoadingConfirmation2)
    Transport
    From tosWarehouse1
    To tosProduction1
End
